Fix modal genres extra padding issue

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1331,6 +1331,7 @@ h5 {
   align-items: center;
   flex-wrap: wrap;
   gap: 0.8rem;
+  margin-block: 1.5rem;
 }
 .modal-container .modal__details__genres__genre {
   color: rgb(79, 168, 250);
@@ -1342,7 +1343,6 @@ h5 {
   align-items: center;
   font-weight: 500;
   letter-spacing: 0.5px;
-  margin-block: 1.5rem;
 }
 .modal-container .modal__details__tagline {
   color: #77bbfb;
@@ -1350,8 +1350,8 @@ h5 {
 .modal-container .modal__details__overview {
   max-width: 90%;
   font-size: 1.1rem;
-  margin-bottom: 1rem;
-  padding-block: 1rem;
+  margin-top: 1rem;
+  padding-bottom: 1rem;
 }
 @media only screen and (max-width: 569px) {
   .modal-container .modal__details__overview {
